<resources>
    <string name="app_name">UTS_AKB_IF3_10116117</string>

    //splash Screen
    <string name="splash">AGHNIYA APPS</string>

    <string name="wt_title">HEADING</string>
    <string name="wt_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="btn_back">KEMBALI</string>
    <string name="btn_next">SELANJUTNYA</string>
    <string name="btn_start">MULAI</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_profile">Profil</string>
    <string name="title_contact">Kontak</string>
    <string name="title_friend">Daftar Teman</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">AGHNIYA NI\'AMILLAH NURHILMAN</string>
    <string name="nim">10116117</string>
    <string name="name_class">AKB - 3</string>
    <string name="desc">Hai, Salam Kenal. Panggil saja Aghniya, saya seorang mahasiswa pra tingkat akhir yang masih duduk dibangku kuliah semester 6. Berasal dari Kabupaten Majalengka tepatnya di Desa Karayunan, Cigasong. Saya Lahir juga di Majalengka pada tanggal 13 Juni 1997. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_tlp">No. Telepon</string>
    <string name="tlp">082214327471</string>
    <string name="text_email">E-Mail</string>
    <string name="email">aghniya.nurhilman@gmail.com</string>
    <string name="text_ig">Instagram</string>
    <string name="ig">aghniyan</string>
    <string name="text_fb">Facebook</string>
    <string name="fb">Aghniya Ni\'amillah Nurhilman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ls_nim">NIM  :</string>
    <string name="ls_nama">Nama  :</string>
    <string name="ls_kelas">Kelas  :</string>
    <string name="ls_telp">Telepon  :</string>
    <string name="ls_email">Email  :</string>
    <string name="ls_ig">Instagram  :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_nim">list_nim</string>
    <string name="list_nama">list_nama</string>
    <string name="list_kelas">list_kelas</string>
    <string name="list_tlp">list_tlp</string>
    <string name="list_email">list_email</string>
    <string name="list_ig">list_ig</string>
    <string name="txt_ig">txt_ig</string>
</resources>
