<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/img_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"/>

    <TextView
        android:id="@+id/txt_nama"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_profil"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />
    <TextView
        android:id="@+id/txt_nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_nama"
        android:text="@string/nim"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/txt_kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_nim"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/name_class"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_kelas"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textSize="16sp"
        />


</RelativeLayout>