<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ContactFragment"
    android:background="@color/colorAccent">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/id_telp"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_tlp"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_tlp"/>
            <ImageView
                android:id="@+id/icon_tlp"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_below="@id/txt_tlp"
                android:src="@drawable/phone"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                />
            <TextView
                android:id="@+id/tlp"
                android:layout_below="@id/txt_tlp"
                android:layout_toEndOf="@id/icon_tlp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/tlp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/id_email"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_email"/>
            <ImageView
                android:id="@+id/icon_email"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/gmail"
                android:layout_below="@id/txt_email"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                />
            <TextView
                android:id="@+id/email"
                android:layout_below="@id/txt_email"
                android:layout_toEndOf="@id/icon_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/email"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/id_ig"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_ig"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_ig"/>
            <ImageView
                android:id="@+id/icon_ig"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/instagram"
                android:layout_below="@id/txt_ig"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                />
            <TextView
                android:id="@+id/ig"
                android:layout_below="@id/txt_ig"
                android:layout_toEndOf="@id/icon_ig"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/txt_ig"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/id_fb"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_fb"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_fb"/>
            <ImageView
                android:id="@+id/icon_fb"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/fb"
                android:layout_below="@id/txt_fb"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                />
            <TextView
                android:id="@+id/fb"
                android:layout_below="@id/txt_fb"
                android:layout_toEndOf="@id/icon_fb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/fb"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>